--- a/Presentation/WebApiLayer/appsettings.Development.json
+++ b/Presentation/WebApiLayer/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-H4L3H83\\SQLEXPRESS;Database=HepsiApiDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-H4L3H83\\SQLEXPRESS;Database=HepsiApiDb;Trusted_Connection=True; TrustServerCertificate=true;"
   }
 }
