--- a/Presentation/WebApiLayer/appsettings.Development.json
+++ b/Presentation/WebApiLayer/appsettings.Development.json
@@ -2,4 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-H4L3H83\\SQLEXPRESS;Database=HepsiApiDb;Trusted_Connection=True; TrustServerCertificate=true;"
   }
+  "JWT": {
+    "Audience": "http://localhost:5000",
+    "Issuer": "http://localhost:5000",
+    "Secret": "=&vz_^()^(0^4-86(u0)$@l)#aq68g)+o=qx4lrct9!w81q!k3",
+    "TokenValidityInMunitues": 15,
+    "RefreshTokenValidityInDays": 60
+  }
+
 }
